--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,9 @@
 	<artifactId>retailone</artifactId>
 	<version>2.0</version>
 	<packaging>war</packaging>
+	<properties>
+        <sonar.host.url>http://10.224.90.21:9000/</sonar.host.url>
+        </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
@@ -62,6 +65,11 @@
 					<webXml>src\main\webapp\WEB-INF\web.xml</webXml>
 				</configuration>
 			</plugin>
+                        <plugin>
+                                <groupId>org.codehaus.mojo</groupId>
+                                <artifactId>sonar-maven-plugin</artifactId>
+                                <version>2.3</version>
+                        </plugin>			
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
