--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.cts.sample</groupId>
@@ -6,8 +8,8 @@
 	<version>5.0</version>
 	<packaging>war</packaging>
 	<properties>
-        <sonar.host.url>http://10.224.90.21:9000/</sonar.host.url>
-        </properties>
+		<sonar.host.url>http://10.224.90.21:9000/</sonar.host.url>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
@@ -22,10 +24,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-    <groupId>log4j</groupId>
-    <artifactId>log4j</artifactId>
-    <version>1.2.17</version>
-	</dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
@@ -43,18 +45,17 @@
 			<version>7.0.22</version>
 		</dependency>
 		<dependency>
-	    <groupId>mysql</groupId>
-	    <artifactId>mysql-connector-java</artifactId>
-	    <version>5.1.39</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.39</version>
 		</dependency>
 		<dependency>
-	    <groupId>net.sourceforge.argo</groupId>
-	    <artifactId>argo</artifactId>
-	    <version>3.19</version>
-</dependency>
+			<groupId>net.sourceforge.argo</groupId>
+			<artifactId>argo</artifactId>
+			<version>3.19</version>
+		</dependency>
 	</dependencies>
 	<build>
-
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -64,11 +65,11 @@
 					<webXml>src\main\webapp\WEB-INF\web.xml</webXml>
 				</configuration>
 			</plugin>
-                        <plugin>
-                                <groupId>org.codehaus.mojo</groupId>
-                                <artifactId>sonar-maven-plugin</artifactId>
-                                <version>2.3</version>
-                        </plugin>			
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>2.3</version>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
@@ -99,11 +100,7 @@
 					</execution>
 				</executions>
 			</plugin>
-
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
-				<version>2.14.1</version> <configuration> <suiteXmlFiles> <suiteXmlFile>src/test/java/Test/testng.xml</suiteXmlFile> 
-				</suiteXmlFiles> <skip>true</skip> </configuration> </plugin> -->
-
+			<!-- <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId><version>2.14.1</version><configuration><suiteXmlFiles><suiteXmlFile>src/test/java/Test/testng.xml</suiteXmlFile></suiteXmlFiles><skip>true</skip></configuration></plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
@@ -117,9 +114,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
-
 		</plugins>
-
 	</build>
 </project>
